# ai-delver

./: .dockerignore  .env  .gitignore  .gitmodules  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  run-ai-dev.sh
docs/: book.toml
intelligence/: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.toml  pyproject.toml
intelligence/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
intelligence/intelligence_rs/: Cargo.toml  README.md
intelligence/intelligence_rs/src/: config.rs  cuda_preload.rs  main.rs
intelligence/intelligence_rs/src/agent/: mod.rs  model.rs  ppo.rs
intelligence/intelligence_rs/src/cli/: mod.rs
intelligence/intelligence_rs/src/environments/: exploration.rs  mod.rs  reward.rs
intelligence/intelligence_rs/src/trainer/: loop.rs
intelligence/src/: config.rs  device.rs  level_hash.rs  main.py  main.rs
intelligence/src/agent/: model.rs  ppo.rs
intelligence/src/ai/: __init__.py  config.py  config.toml  exceptions.py
intelligence/src/ai/agents/: ppo_agent_factory.py
intelligence/src/ai/sessions/: __init__.py  session_manager.py  session_registry.py
intelligence/src/ai/trainer/: _trainer_environment_manager.py  _trainer_model_manager.py  background_trainer.py  trainer.py
intelligence/src/api/: mod.rs  routes.py  routes.rs  session.rs
intelligence/src/cli/: mod.rs
intelligence/src/environments/: level_env.rs  reward.rs
intelligence/src/trainer/: loop.rs  mod.rs  showcase.rs
runtime/: .gitignore  Cargo.toml  build_rust.py  pyproject.toml
runtime/runtime/: __init__.py  exceptions.py  runtime.py
runtime/runtime/episode_trajectory/: trajectory_stats_calculator.py
runtime/runtime/episode_trajectory/snapshots/: entity_state_factory_provider.py  entity_state_snapshot.py  frame_snapshot.py  (+1 more)
runtime/runtime/world_objects/: __init__.py  delver.py  goal.py  item.py  skeletal_entity.py  world_object.py  world_objects_controller.py
runtime/src/: engine.rs  lib.rs  world_objects.rs
runtime/src/config/: mod.rs
runtime/src/engine/: grid.rs  physics_constants.rs  physics_engine.rs  physics_world.rs  world.toml  world_config.rs
runtime/src/world_objects/: base_delver.rs  base_goal.rs  physics_entity.rs
(+131 files in other folders)
