[package]
name = "ai-delver-intelligence"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
ai-delver-level = { path = "../level" }
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
futures-util = "0.3"
rand = "0.9"
rand_chacha = "0.9"
rayon = "1"
runtime_core = { path = "../runtime", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tch = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
