[package]
name = "runtime_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "runtime_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rapier2d = { version = "0.18", features = ["serde-serialize"] }
