[package]
name = "runtime_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "runtime_core"
crate-type = ["rlib", "cdylib"]

[features]
default = ["python"]
python = ["dep:pyo3"]

[dependencies]
anyhow = "1"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
rapier2d = { version = "0.18", features = ["serde-serialize"] }
