[package]
name = "ai-delver-intelligence"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
ai-delver-level = { path = "../../level" }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
rand = "0.9"
rand_chacha = "0.9"
rayon = "1"
runtime_core = { path = "../../runtime", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tch = "0.20"
toml = "0.9"
libc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
